--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
 
     <section class="about">
-        <h2>¿Quiénes Somos?</h2>
-        <p>En Labowebs nos especializamos en el diseño y desarrollo de sitios web adaptados a las necesidades de pequeñas empresas, brindando soluciones accesibles, atractivas y funcionales.</p>
+        <h2>Sobre nosotros</h2>
+        <p>Bienvenidos a nuestro proyecto. Aquí aprenderás más sobre lo que hacemos y cómo trabajamos.</p>
 
         <h2>Nuestros Servicios</h2>
         <ul>
